--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Bootstarp iTi</title>
+		<title>Document</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/all.min.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,118 +12,76 @@
 			href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Scheherazade+New&display=swap"
 			rel="stylesheet"
 		/>
-
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
 		<section class="w-100">
-			<nav class="navbar navbar-expand-lg bg-dark">
 			<div class="container">
-					<a class="navbar-brand navbar-light" href="#">
-						<i class="fas fa-camera"></i> Album
-					</a>
-					<button
-						class="navbar-toggler"
-						type="button"
-						data-toggle="collapse"
-						data-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent"
-						aria-expanded="false"
-						aria-label="Toggle navigation"
-					>
-					<i class="fas fa-bars"></i>
-						<!-- <span class="navbar-toggler-icon"></span> -->
-					</button>
-
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active">
-								<a class="nav-link" href="#"
-									>Home <span class="sr-only">(current)</span></a
-								>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">About</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Galery</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Contact</a>
-							</li>
-							
-						</ul>
-						
-					</div>
-				</nav>
-				<div class="row py-5">
+				<div class="row py-2">
 					<div class="col-12 py-2 text-center">
-						<h1>Album Example</h1>
+						<h2>Build Your Profile</h2>
 						<p class="m-auto w-50 pb-4">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-							odit accusamus laboriosam ipsum voluptate dicta, laudantium
-							voluptas odio dolordem voluptatum hic incidunt esse repudiandae at
-							unde delectus ducimus iusto?
+							This information will let you know about you.
 						</p>
-						<button type="button" class="btn btn-primary">
-							Main call to action
-						</button>
-						<button type="button" class="btn btn-secondary">
-							Secondary action
-						</button>
 					</div>
 				</div>
+			</div>
+			<div class="btn-group w-100" role="group" aria-label="Basic example">
+				<button type="button" class="btn btn-secondary py-3">ABOUT</button>
+				<button type="button" class="btn btn-secondary">
+					<a class="a-link" href="#">ACCOUNT</a>
+				</button>
+				<button type="button" class="btn btn-secondary">ADDRESS</button>
+			</div>
+			<div class="container regist">
+				<div class="row pt-4">
+					<div class="col-12 py-2 text-center">
+						<p class="m-auto w-75 pb-4">
+							Let's start with the basic information (with validation)
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 pic">
+						<div class="w-75 text-center">
+							<img src="images/icon-4.png" class="img-fluid" alt="" />
+							<p>CHOOSE PICTURE</p>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="input">
+							<i class="fas fa-user-edit"></i>
+
+							<input
+								class="input-text"
+								type="text"
+								placeholder="First Name (required)"
+							/>
+						</div>
+						<div class="input">
+							<i class="fas fa-user-check"></i>
+
+							<input
+								class="input-text"
+								type="text"
+								placeholder="Last Name (required)"
+							/>
+						</div>
+					</div>
+				</div>
+				<div class="row py-3">
+					<div class="col-12 py-2 text-center">
+						<i class="fas fa-envelope text-dark"></i>
+						<input
+							class="input-text"
+							type="text"
+							placeholder="Last Name (required)"
+						/>
+					</div>
+				</div>
+				<button type="button" class="btn float-right next">Next</button>
 			</div>
 		</section>
-
-		<div class="con-car pb-5">
-			<div class="container">
-				<div class="row bg-light py-4 card-group">
-					<div class="col-md-4">
-						<div class="card">
-							<img src="images/66.jpg" class="card-img-top" alt="..." />
-							<div class="card-body">
-								<p class="card-text">
-									Some quick example text to build on the card title and make up
-									the bulk of the card's content.
-								</p>
-								<a href="#" class="btn">view</a>
-								<a href="#" class="btn">Edit</a>
-								<span class="float-right">9 mins</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card">
-							<img src="images/66.jpg" class="card-img-top" alt="..." />
-							<div class="card-body">
-								<p class="card-text">
-									Some quick example text to build on the card title and make up
-									the bulk of the card's content.
-								</p>
-								<a href="#" class="btn">view</a>
-								<a href="#" class="btn">Edit</a>
-								<span class="float-right">9 mins</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card">
-							<img src="images/66.jpg" class="card-img-top" alt="..." />
-							<div class="card-body">
-								<p class="card-text">
-									Some quick example text to build on the card title and make up
-									the bulk of the card's content.
-								</p>
-								<a href="#" class="btn">view</a>
-								<a href="#" class="btn">Edit</a>
-								<span class="float-right">9 mins</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/popper.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
