change the index2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="btn-group w-100" role="group" aria-label="Basic example">
 				<button type="button" class="btn btn-secondary py-3">ABOUT</button>
 				<button type="button" class="btn btn-secondary">
-					<a class="a-link" href="#">ACCOUNT</a>
+					<a class="a-link" href="sub.html">ACCOUNT</a>
 				</button>
 				<button type="button" class="btn btn-secondary">ADDRESS</button>
 			</div>
